--- a/bootcamp-frontend-t-g9-develop/semana-4/css/index.css
+++ b/bootcamp-frontend-t-g9-develop/semana-4/css/index.css
@@ -1,5 +1,6 @@
 :root {
-  --primary-theme-color: rgb(20, 255, 83);
+  scroll-behavior: smooth;
+  --primary-theme-color: rgb(20, 255, 75);
   --secondary-theme-color: #282c34;
   --primary-text-color: #fff;
   --primary-highlight-color: #61dafb;
@@ -8,15 +9,131 @@
   --max-width-container: 1024px;
   --primary-all-transition: all 0.25s ease-in-out;
   --primary-font-family: 'Roboto Mono', monospace;
-  --letter-color-1: #00bef8;
-  --letter-color-2: #2b06ff;
+  --letter-color-1: #283434e8;
+  --letter-color-2: #1b06ff;
   --letter-color-3: #ff4d00;
   --letter-color-4: #ffe600;
-  --letter-color-5: #bb00ff4c;
+  --letter-color-5: #bb00ff;
   --letter-color-6: #f5926b;
 }
 
+@keyframes zoom {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1.125);
+  }
+}
+
 .body {
-  background-color: var(--primary-theme-color);
+  background-image: radial-gradient(var(--primary-theme-color), var(--secondary-theme-color));
+  color: var(--primary-text-color);
   font-family: var(--primary-font-family);
+  margin: 0;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
+
+.hero__name {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-decoration: none;
+  animation: zoom 2s ease-in-out infinite alternate;
+}
+
+.hero__name-letter {
+  position: relative;
+  transition: var(--primary-all-transition);
+}
+
+.hero__name-letter:hover{
+  filter:brightness(125) ;
+}
+
+.hero__name-letter:nth-child(1) {
+  color: var(--letter-color-1)
+}
+
+.hero__name-letter:nth-child(2) {
+  color: var(--letter-color-2)
+}
+
+.hero__name-letter:nth-child(3) {
+  color: var(--letter-color-3)
+}
+
+.hero__name-letter:nth-child(4) {
+  color: var(--letter-color-4)
+}
+
+.hero__name-letter:nth-child(5) {
+  color: var(--letter-color-5)
+}
+
+.hero__name-letter:nth-child(6) {
+  color: var(--letter-color-6)
+}
+
+.hero__name-letter::before{
+  content: var(--letter);
+  position: absolute;
+  transform: scale(1.125);
+  filter: blur(0.25rem);
+}
+
+.hero__name-letter::after{
+  content: var(--letter);
+  position: absolute;
+  top: 75%;
+  left: 0;
+  filter: blur(0.25rem);
+  transform: rotateX(137deg);
+}
+
+.acrostic {
+  padding: var(--padding-section);
+}
+
+.acrostic__stanza {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  max-width: var(--max-width-container);
+  margin: auto;
+  padding: var(--padding-container);
+}
+
+.acrostic__verse {
+  color: var(--primary-text-color);
+  letter-spacing: 0.05rem;
+  font-weight: 500;
+  text-shadow:
+    0 0 0.25rem var(--primary-highlight-color),
+    0 0 0.5rem var(--primary-highlight-color),
+    0 0 0.75rem var(--primary-highlight-color);
+}
+
+.acrostic__verse::first-letter {
+  font-size: 2rem;
+  font-weight: 800;
+}
+@media (min-width: 854px) {
+  .hero__name {
+    font-size: 5rem;
+  }
 }
